--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ nav {
     align-self: center;
 }
 
+#input-search:hover {
+	box-shadow: 2px 2px 5px #bcbcbc;
+}
+
 #input-search {
     width: 580px;
     border-radius: 24px;
