--- a/main.css
+++ b/main.css
@@ -34,23 +34,30 @@ nav {
     position: relative;
     top: 275px;
     align-self: center;
+    border-radius: 24px;
+    /* display: flex; */
+    width: 584px;
+    height: 44px;
+    border: 1px solid #dfe1e5;
 }
 
-#input-search:hover {
+#search-bar:hover {
 	box-shadow: 2px 2px 5px #bcbcbc;
 }
 
 #input-search {
-    width: 580px;
-    border-radius: 24px;
-    height: 44px;
+	border: 0;
+	margin-left: 45px;
+	height: 24px;
+	font-size: 16px;
+	margin-top: 10px;
 }
 
 #search-bar img {
-    position: relative;
-    z-index: 2;
-    left: 40px;
-    top: 7px;
+	position: relative;
+	z-index: 2;
+	left: 17px;
+	top: 8px;
 }
 
 #buttons {
