--- a/main.css
+++ b/main.css
@@ -76,6 +76,11 @@ nav {
     background-color: #f2f2f2;
 }
 
+#left-button:hover, #right-button:hover {
+    border: 1px solid #cac9c9;
+    box-shadow: 1px 1px 2px #cac9c9;
+}
+
 #footer {
 	display: flex;
 	position: absolute;
